<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registrationAct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:src="@drawable/world_landmarks"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/regType"
        android:text="@string/signInNow"
        android:gravity="center"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:layout_marginBottom="20sp"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameInput"
        android:background="@drawable/edit_text_design"
        android:hint="@string/nameHint"
        android:inputType="text"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:visibility="gone"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailInput"
        android:background="@drawable/edit_text_design"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordInput"
        android:background="@drawable/edit_text_design"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordConstraint"
        android:text="@string/passwordConstraint"
        android:textSize="14sp"
        android:layout_marginStart="40dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/okayToPolicy"
        android:text="@string/checkAgreement"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:visibility="gone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:id="@+id/regTypeButton"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:height="60dp"
        android:backgroundTint="#24477A"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signUpText"
        android:text="@string/doNotHaveAccount"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        android:focusable="true"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/facebook"
            android:background="@null"
            android:layout_margin="15dp"
            android:scaleType="fitXY"
            />
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/google"
            android:background="@null"
            android:layout_margin="15dp"
            android:scaleType="fitXY"
            />
        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/instagram"
            android:background="@null"
            android:layout_margin="15dp"
            android:scaleType="fitXY"
            />

    </LinearLayout>
    
    

</LinearLayout>