<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onBoardingAct"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OnboardingActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:scaleType="fitXY"
        android:src="@drawable/onboarding_image1" />

    <TextView
        android:id="@+id/quotation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/onboarding_quotation1"
        android:textSize="30sp"
        android:textStyle="bold"
        android:letterSpacing="0.15"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <TextView
        android:id="@+id/sentence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:alpha="0.6"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:letterSpacing="0.15"
        android:lineSpacingExtra="15dp"
        android:text="@string/onboarding_sentence1"
        android:textSize="17sp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_button1"
        android:id="@+id/moveButton"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:height="60dp"
        android:backgroundTint="#24477A"
        android:textSize="18sp"
        />

</LinearLayout>